--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -690,3 +690,53 @@ a {
   -o-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
+
+.eventCardsContainer{
+  margin-top: 100px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1rem;
+}
+
+.eventCardsContainer .card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin: 20px auto;
+  overflow: hidden;
+  transition: transform 0.2s ease-in-out;
+}
+
+/* Add hover effect */
+.eventCardsContainer .card:hover {
+  transform: translateY(-5px);
+}
+
+/* Card body styling */
+.eventCardsContainer .card-body {
+  padding: 20px;
+  background-color: #444;
+}
+
+/* Card title styling */
+.eventCardsContainer .card-title {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: var(--theme-color);
+}
+
+/* Card text styling */
+.eventCardsContainer .card-text {
+  font-size: 1.5rem;
+  margin-bottom: 5px;
+  color: #eee;
+}
+
+/* Text-muted styling */
+.eventCardsContainer .text-muted {
+  color: #eee;
+}
+
+.eventCardsContainer .btn{
+  font-size: 1.5rem;
+}
